[package]
name = "romulos"
version = "0.1.0"
edition = "2018"

[dependencies]
bootloader = "0.9"

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profiled used for `cargo build --release`
[profile.release]
panic = "abort" # disabled stack unwinding on panic