[package]
name = "romulos"
version = "0.1.0"
edition = "2018"

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profiled used for `cargo build --release`
[profile.release]
panic = "abort" # disabled stack unwinding on panic